async_tasks completing on a different thread...
... fail to reasume previous awaits.
Change the async tasks to store the Reactor core so whenever a task is
awaken we can determine wether we need to send it for running on a
different reactor

--- a/mayastor/Cargo.toml
+++ b/mayastor/Cargo.toml
@@ -23,6 +23,7 @@ path = "src/bin/uring-support.rs"
 [dev-dependencies]
 assert_matches = "1.2"
 run_script = "*"
+async-std = {"version" = "1.5.0", features = ["attributes"]}
 
 [dependencies]
 async-task = "1.3.1"
