--- a/mayastor/Cargo.toml
+++ b/mayastor/Cargo.toml
@@ -54,6 +54,7 @@ git-version = "0.3"
 io-uring = "0.4.0"
 ioctl-gen = "0.1.1"
 jsonrpc = { path = "../jsonrpc"}
+lazy_static = "1.4.0"
 libc = "0.2"
 log = "0.4"
 nix = "0.16"
