--- a/mayastor/Cargo.toml
+++ b/mayastor/Cargo.toml
@@ -55,6 +55,7 @@ http = "0.1" # We are blocked on updating http until we update tonic.
 io-uring = "0.4.0"
 ioctl-gen = "0.1.1"
 jsonrpc = { path = "../jsonrpc"}
+lazy_static = "1.4.0"
 libc = "0.2"
 log = "0.4"
 nix = "0.16"
