--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -9,8 +9,8 @@ reviewers:
   - blaisedias
   - cjones1024
   - jonathan-teh
-  - tjoshum
   - jkryl
+  - gila
   - paulyoong
   - chriswldenyer
   - tiagolobocastro
