--- a/deploy/namespace.yaml
+++ b/deploy/namespace.yaml
@@ -1,10 +1,6 @@
-{
-  "kind": "Namespace",
-  "apiVersion": "v1",
-  "metadata": {
-    "name": "mayastor",
-    "labels": {
-      "name": "mayastor"
-    }
-  }
-}
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: mayastor
+  labels:
+    name: mayastor
