Allow Mayastor container to access udev database
Mayastor requires access to the udev database that resides in /run/udev
in order for the ListBlockDevices() gRPC request to function correctly.
This access must be provided via an explicit volume mount when Mayastor
is run from within a container. Without such access, the gRPC call
returns partial and (highly misleading) incorrect information.

cjones1024 carried out the investigation and made the original changes.
I have moved the changes from their original place in
deploy/mayastor-daemonset.yaml to
chart/templates/mayastor-daemonset.yaml as this is now used to construct
the YAML file in the deploy directory.

--- a/chart/templates/mayastor-daemonset.yaml
+++ b/chart/templates/mayastor-daemonset.yaml
@@ -65,6 +65,8 @@ spec:
         volumeMounts:
         - name: device
           mountPath: /dev
+        - name: udev
+          mountPath: /run/udev
         - name: dshm
           mountPath: /dev/shm
         - name: configlocation
@@ -91,6 +93,10 @@ spec:
       - name: device
         hostPath:
           path: /dev
+          type: Directory
+      - name: udev
+        hostPath:
+          path: /run/udev
           type: Directory
       - name: dshm
         emptyDir:
