--- a/jsonrpc/Cargo.toml
+++ b/jsonrpc/Cargo.toml
@@ -9,8 +9,8 @@ nix = "0.14.1"
 serde = "1.0.84"
 serde_derive = "1.0.84"
 serde_json = "1.0.36"
-tonic = "0.1.0-beta.1"
-tokio = { version = "0.2", features =  ["full"]  }
+tonic = "0.4"
+tokio = { version = "1", features =  ["full"]  }
 tracing = "0.1"
 tracing-futures = "0.2.4"
 tracing-subscriber = "0.2.0"
