--- a/csi/Cargo.toml
+++ b/csi/Cargo.toml
@@ -10,11 +10,12 @@ path = "src/server.rs"
 
 [build-dependencies]
 bytes = "0.5"
-tonic-build = "0.1.0"
-prost-build = "0.6.0"
+tonic-build = "0.4"
+prost-build = "0.7"
 
 [dependencies]
 async-trait = "0.1.36"
+async-stream = "0.3.0"
 bytes = "0.5"
 bytesize = "1.0.0"
 chrono = "0.4.9"
@@ -24,7 +25,7 @@ failure = "0.1"
 futures = { version = "0.3", default-features = false }
 git-version = "0.3.1"
 glob = "*"
-http = "0.1"
+http = "0.2"
 http-body = "0.2"
 itertools = "0.9"
 lazy_static = "1.4.0"
@@ -34,18 +35,19 @@ nix = "0.16"
 nvmeadm = { path = "../nvmeadm", version = "0.1.0" }
 once_cell = "1.3.1"
 proc-mounts = "0.2"
-prost = "0.6"
-prost-derive = "0.6"
-prost-types = "0.6"
+prost = "0.7"
+prost-derive = "0.7"
+prost-types = "0.7"
 regex = "1.3.6"
 serde_json = "1.0.40"
 snafu =  "0.6"
 sys-mount = "1.2"
 sysfs = { path = "../sysfs", version = "0.1.0" }
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+tokio-stream = { version = "0.1.3", features = ["net"] }
 run_script = "*"
-tonic = "0.1"
-tower = "0.3"
+tonic = "0.4"
+tower = "0.4.5"
 tracing = "0.1"
 tracing-futures = "0.2.4"
 tracing-subscriber = "0.2.0"
