--- a/mayastor/Cargo.toml
+++ b/mayastor/Cargo.toml
@@ -51,7 +51,7 @@ env_logger = "0.7"
 futures = "0.3"
 futures-timer = "2.0"
 git-version = "0.3"
-http = "0.1" # We are blocked on updating http until we update tonic.
+http = "0.2"
 io-uring = "0.4.0"
 ioctl-gen = "0.1.1"
 jsonrpc = { path = "../jsonrpc"}
@@ -61,9 +61,9 @@ nix = "0.16"
 once_cell = "1.3.1"
 pin-utils = "0.1"
 proc-mounts = "0.2"
-prost = "0.6"
-prost-derive = "0.6"
-prost-types = "0.6"
+prost = "0.7"
+prost-derive = "0.7"
+prost-types = "0.7"
 rand = "0.7.3"
 serde_json = "1.0"
 serde_yaml = "0.8"
@@ -71,8 +71,8 @@ signal-hook = "0.1"
 snafu = "0.6"
 structopt = "0.3.11"
 nats = "0.8"
-tonic = "0.1"
-tower = "0.3"
+tonic = "0.4"
+tower = "0.4.5"
 tracing = "0.1"
 tracing-core = "0.1"
 tracing-futures = "0.2.4"
@@ -82,8 +82,6 @@ udev = "0.4"
 url = "2.1"
 smol = "1.0.0"
 dns-lookup = "1.0.4"
-ipnetwork = "0.17.0"
-bollard = "0.8.0"
 mbus_api = { path = "../mbus-api" }
 nvmeadm = {path = "../nvmeadm", version = "0.1.0"}
 
@@ -102,7 +100,7 @@ path = "../sysfs"
 
 [dependencies.tokio]
 features = ["full"]
-version = "0.2"
+version = "1.0"
 
 [dependencies.uuid]
 features = ["v4"]
