--- a/mbus-api/Cargo.toml
+++ b/mbus-api/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2018"
 [dependencies]
 nats = "0.8"
 structopt = "0.3.15"
-tokio = { version = "0.2", features = ["full"] }
+log = "0.4.11"
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
+env_logger = "0.7"
 serde_json = "1.0"
 async-trait = "0.1.36"
 dyn-clonable = "0.9.0"
