--- a/mayastor/Cargo.toml
+++ b/mayastor/Cargo.toml
@@ -58,6 +58,7 @@ jsonrpc = { path = "../jsonrpc"}
 lazy_static = "1.4.0"
 libc = "0.2"
 log = "0.4"
+merge = "0.1.0"
 nix = "0.16"
 once_cell = "1.3.1"
 pin-utils = "0.1"
