--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -4,8 +4,10 @@ mayastorCpuCount: "1"
 mayastorHugePagesGiB: "1"
 mayastorImagesRegistry: ""
 mayastorPools:
-  - node: "NODE_NAME"
-    device: "DEVICE"
+  - node: "k8s.worker.8"
+    device: "/var/openebs/local"
+  - node: "k8s.worker.9"
+    device: "/var/openebs/local"  
 # This option is intended for development yamls and motivated by the problem of
 # moac that does not update status of msp resource in some cases. Feel free to
 # remove when no longer needed.
