--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -4,10 +4,12 @@ mayastorCpuCount: "1"
 mayastorHugePagesGiB: "1"
 mayastorImagesRegistry: ""
 mayastorPools:
-  - node: "k8s.worker.8"
+  - node: "openebs"
     device: "/var/openebs/local"
-  - node: "k8s.worker.9"
-    device: "/var/openebs/local"  
+  # - node: "k8s.worker.8"
+  #   device: "/var/openebs/local"
+  # - node: "k8s.worker.9"
+  #   device: "/var/openebs/local"  
 # This option is intended for development yamls and motivated by the problem of
 # moac that does not update status of msp resource in some cases. Feel free to
 # remove when no longer needed.
