--- a/openebs-maystor.yaml
+++ b/openebs-maystor.yaml
@@ -4,19 +4,58 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: moac
-  namespace: mongodb-sharded-ns
+  namespace: mayastor
 ---
 # Source: mayastor/templates/nats-deployment.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nats-config
-  namespace: mongodb-sharded-ns
+  namespace: mayastor
 data:
   nats.conf: |
     pid_file: "/var/run/nats/nats.pid"
+    debug: true
+    trace:  true
 
     http: 8222
+---
+# Source: mayastor/templates/storage-classes.yaml
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: mayastor-iscsi
+parameters:
+  # Set the number of data replicas ("replication factor")
+  repl: "1"
+  # Set the export transport protocol
+  protocol: iscsi
+provisioner: io.openebs.csi-mayastor
+---
+# Source: mayastor/templates/storage-classes.yaml
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: mayastor-nvmf
+parameters:
+  # Set the number of data replicas ("replication factor")
+  repl: "3"
+  # Set the export transport protocol
+  protocol: nvmf
+provisioner: io.openebs.csi-mayastor
+---
+# Source: mayastor/templates/test/pvc.yaml
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: ms-volume-claim
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: mayastor-iscsi
 ---
 # Source: mayastor/templates/moac-rbac.yaml
 kind: ClusterRole
@@ -101,7 +140,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: moac
-  namespace: mongodb-sharded-ns
+  namespace: mayastor
 roleRef:
   kind: ClusterRole
   name: moac
@@ -112,7 +151,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nats
-  namespace: mongodb-sharded-ns
+  namespace: mayastor
   labels:
     app: nats
 spec:
@@ -133,7 +172,7 @@ spec:
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  namespace: mongodb-sharded-ns
+  namespace: mayastor
   name: mayastor-csi
   labels:
     openebs/engine: mayastor
@@ -161,7 +200,7 @@ spec:
       containers:
       - name: mayastor-csi
         image: mayadata/mayastor-csi:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         # we need privileged because we mount filesystems and use mknod
         securityContext:
           privileged: true
@@ -258,7 +297,7 @@ spec:
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  namespace: mongodb-sharded-ns
+  namespace: mayastor
   name: mayastor
   labels:
     openebs/engine: mayastor
@@ -289,7 +328,7 @@ spec:
       containers:
       - name: mayastor
         image: mayadata/mayastor:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: MY_NODE_NAME
           valueFrom:
@@ -365,12 +404,32 @@ spec:
           path: /var/local/mayastor/config.yaml
           type: FileOrCreate
 ---
+# Source: mayastor/templates/test/test-pod.yaml
+kind: Pod
+apiVersion: v1
+metadata:
+  name: fio
+spec:
+  volumes:
+    - name: fio-1-volume
+      persistentVolumeClaim:
+       claimName: fio-1-volume-claim
+  containers:
+    - name: fio
+      image: nixery.dev/shell/fio
+      args:
+        - sleep
+        - "1000000"
+      volumeMounts:
+        - mountPath: "/volume"
+          name: fio-1-volume
+---
 # Source: mayastor/templates/moac-deployment.yaml
 kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: moac
-  namespace: mongodb-sharded-ns
+  namespace: mayastor
 spec:
   replicas: 1
   selector:
@@ -412,7 +471,7 @@ spec:
 
         - name: moac
           image: mayadata/moac:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           args:
             - "--csi-address=$(CSI_ENDPOINT)"
             - "--namespace=$(MY_POD_NAMESPACE)"
@@ -438,7 +497,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: nats
-  namespace: mongodb-sharded-ns
+  namespace: mayastor
   labels:
     app: nats
 spec:
@@ -559,11 +618,25 @@ apiVersion: "openebs.io/v1alpha1"
 kind: MayastorPool
 metadata:
   # Name can be anything as long as it is unique
-  name: pool-on-openebs
+  name: pool-on-k8s.worker.8
   # or let k8s to generate a unique pool name
   #generateName: pool-
-  namespace: mongodb-sharded-ns
+  namespace: mayastor
 spec:
-  node: openebs
+  node: k8s.worker.8
   # ATM only one disk device is supported (i.e. /dev/nvme1n1)
-  disks: ["/var/openebs/local"]
+  disks: ["aio:///var/openebs/local"]
+---
+# Source: mayastor/templates/pool.yaml
+apiVersion: "openebs.io/v1alpha1"
+kind: MayastorPool
+metadata:
+  # Name can be anything as long as it is unique
+  name: pool-on-k8s.worker.9
+  # or let k8s to generate a unique pool name
+  #generateName: pool-
+  namespace: mayastor
+spec:
+  node: k8s.worker.9
+  # ATM only one disk device is supported (i.e. /dev/nvme1n1)
+  disks: ["aio:///var/openebs/local"]
